--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <img src="images/aeroboc-c3.jpg" alt="Aerobic is fun!">
           <h3>Blast</h3>
           <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
+
         </div>
       </div>
     </div>
